// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-css-modules should create valid app 1`] = `
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="/main-bfe8911084b821bf8edd.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/runtime-0fab60c54740754a26ba.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/vendors~main-ffde50b31d4f838b885c.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/main-99e47a96fdf88f06044e.js"
    >
  </head>
  <body>
    <div id="app">
      <div class="_1brbpTo Jlnxw97">
        <div class="_3YtmnHj lwsthgY"
             data-automation-text="true"
        >
          Initial render
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="/runtime-0fab60c54740754a26ba.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/vendors~main-ffde50b31d4f838b885c.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/main-99e47a96fdf88f06044e.js"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
         <div class="_3YtmnHj lwsthgY"
              data-automation-text="true"
         >
-          Initial render
+          Updated render
         </div>
       </div>
     </div>

`;

exports[`react-css-modules should generate the expected files 1`] = `
Object {
  "index.html": <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="/main-bfe8911084b821bf8edd.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/runtime-0fab60c54740754a26ba.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/vendors~main-ffde50b31d4f838b885c.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/main-99e47a96fdf88f06044e.js"
    >
  </head>
  <body>
    <div id="app">
      <div class="_1brbpTo Jlnxw97">
        <div class="_3YtmnHj lwsthgY"
             data-automation-text="true"
        >
          Initial render
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="/runtime-0fab60c54740754a26ba.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/vendors~main-ffde50b31d4f838b885c.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/main-99e47a96fdf88f06044e.js"
    >
    </script>
  </body>
</html>,
  "main-99e47a96fdf88f06044e.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main-bfe8911084b821bf8edd.css": ._1brbpTo {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
._1brbpTo ._3YtmnHj {
  font-size: 32px;
}
.Jlnxw97 {
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}
.Jlnxw97 .lwsthgY {
  color: red;
}
,
  "runtime-0fab60c54740754a26ba.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~main-ffde50b31d4f838b885c.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;
